<resources>
    <string name="app_name" translatable="false">NL Interface</string>
    <string name="settings_preferences_key" translatable="false">
        SETTINGS_KEY</string>
    <string name="settings_keep_screen_on_key" translatable="false">
        KEEP_SCREEN_ON_KEY</string>
    <string name="settings_theme_key" translatable="false">
        THEME_KEY</string>
    <string name="settings_feedback_key" translatable="false">
        FEEDBACK_KEY</string>
    <string name="settings_narration_speed_key" translatable="false">
        NARRATION_SPEED_KEY</string>
    <string name="settings_narration_amount_key" translatable="false">
        NARRATION_AMOUNT_KEY</string>
    <string name="barcode_service_mode_key" translatable="false">
        BARCODE_SERVICE_MODE_KEY</string>
    <string name="barcode_settings_preferences_key" translatable="false">
        BARCODE_SETTINGS_KEY</string>
    <string name="settings_name_and_volume_key" translatable="false">
        NAME_AND_VOLUME_KEY</string>
    <string name="settings_labels_key" translatable="false">
        LABELS_KEY</string>
    <string name="settings_country_of_origin_key" translatable="false">
        COUNTRY_OF_ORIGIN_KEY</string>
    <string name="settings_ingredients_and_allergies_key" translatable="false">
        INGREDIENTS_KEY</string>
    <string name="settings_short_nutritional_values_key" translatable="false">
        NUTRITIONAL_VALUES_KEY</string>
    <string name="brands_key" translatable="false">
        BRANDS_KEY</string>
    <string name="go_to">go to</string>
    <string name="navigate_to_grocery_list">go to grocery list</string>
    <string name="navigate_to_place_details">go to place details</string>
    <string name="navigate_to_settings">go to settings</string>
    <string name="navigate_to_main_menu">go to main menu</string>
    <string name="navigate_to_barcode_scanner_settings">go to barcode scanner settings</string>
    <string name="tell_me_my_options">tell me my options</string>
    <string name="cancel">cancel</string>
    <string name="add_indicator">add</string>
    <string name="remove_indicator">remove</string>
    <string name="stop_speech">stop</string>
    <string name="add_an_item">add an item</string>
    <string name="remove_an_item">remove an item</string>
    <string name="check_if_an_item_is_on_the_list">check if an item is on the list</string>
    <string name="add_an_item_to_the_cart">add an item to the cart</string>
    <string name="remove_an_item_from_the_cart">remove an item from the cart</string>
    <string name="list_all_grocery_items">list all grocery items</string>
    <string name="list_all_items_in_cart">list all items in the cart</string>
    <string name="list_all_items_not_in_cart">list all items not in the cart</string>
    <string name="all_items_are_removed">all items have been removed from the grocery list</string>
    <string name="remove_a_place">remove a place</string>
    <string name="tell_me_the_opening_hours_of_a_place">tell me the opening hours of a place</string>
    <string name="add_a_place">Add a place</string>
    <string name="list_all_saved_places">list all saved places</string>
    <string name="list_my_favorite_places">list my favorite places</string>
    <string name="list_all_open_places">list all open places</string>
    <string name="add_a_place_to_favorites">add a place to favorites</string>
    <string name="remove_a_place_from_favorites">remove a place from favorites</string>
    <string name="change_theme">change theme</string>
    <string name="light_theme">light theme</string>
    <string name="dark_theme">dark theme</string>
    <string name="default_theme">default theme</string>
    <string name="change_screen_settings">change screen settings</string>
    <string name="keep_screen_always_on">keep screen always on</string>
    <string name="dim_screen_after_a_while">dim screen after a while</string>
    <string name="barcode_service_mode_on">barcode scanner on</string>
    <string name="barcode_service_mode_off">barcode scanner off</string>
    <string name="product_name_on">product name on</string>
    <string name="product_name_off">product name off</string>
    <string name="labels_on">labels on</string>
    <string name="labels_off">labels off</string>
    <string name="country_of_origin_on">country of origin on</string>
    <string name="country_of_origin_off">country of origin off</string>
    <string name="ingredients_and_allergies_on">ingredients and allergies on</string>
    <string name="ingredients_and_allergies_off">ingredients and allergies off</string>
    <string name="nutritional_values_on">nutritional values on</string>
    <string name="nutritional_values_off">nutritional values off</string>
    <string name="main_menu">Main Menu</string>
    <string name="invalid_command">Invalid command.</string>
    <string name="your_options_are">your options are:</string>
    <string name="audio_permission_granted">Permission granted for using voice commands!</string>
    <string name="audio_permission_denied">Please provide microphone permission to use voice commands.</string>
    <string name="location_permission_granted">Permission granted for using your current location!</string>
    <string name="location_permission_denied">Please provide your permission to use your current location.
    The AI needs this information for better results.</string>
    <string name="camera_permission_granted">Permission granted for using your camera.</string>
    <string name="camera_permission_denied">Please provide your permission to use your camera,
    so you can use the barcode scanner.</string>
    <string name="or">or</string>
    <string name="and">and</string>
    <string name="grocery_list">Grocery List</string>
    <string name="ITEMNAME_is_not_on_the_list">%1$s is not on the list</string>
    <string name="ITEMNAME_is_on_the_list">%1$s is already on the list</string>
    <string name="ITEMNAME_is_in_the_cart">%1$s is in the cart</string>
    <string name="ITEMNAME_is_not_in_the_cart">%1$s is not in the cart</string>
    <string name="deleted_ITEMNAME_from_grocery_list">Deleted %1$s from grocery list.</string>
    <string name="added_ITEMNAME_to_list">Added %1$s to list.</string>
    <string name="cancelled_adding_item">Cancelled adding item to list.</string>
    <string name="enter_item_to_add">Enter the item you want to add.</string>
    <string name="placed_ITEMNAME_into_cart">Placed %1$s into cart.</string>
    <string name="removed_ITEMNAME_from_cart">Removed %1$s from cart.</string>
    <string name="deleted_ITEMNAME_from_saved_places">Deleted %1$s from list.</string>
    <string name="there_are_no_items_on_the_list">there are no items on the list</string>
    <string name="there_are_no_items_in_the_cart">there are no items in the cart</string>
    <string name="all_items_are_in_the_cart">all items are in the cart</string>
    <string name="place_details">Place Details</string>
    <string name="STORENAME_is_not_on_the_list">%1$s is not on the list</string>
    <string name="STORENAME_is_a_favorite">%1$s is a favorite</string>
    <string name="STORENAME_is_not_a_favorite">%1$s is not a favorite</string>
    <string name="STORENAME_added_to_saved_places">%1$s was added to saved places.</string>
    <string name="added_STORENAME_to_favorites">Added %1$s to favorites.</string>
    <string name="deleted_STORENAME_from_favorites">Deleted %1$s from favorites.</string>
    <string name="there_are_no_favorites">there are no favorites</string>
    <string name="there_are_no_open_places">there are no open places</string>
    <string name="there_are_no_saved_places">there are no saved places</string>
    <string name="settings">Settings</string>
    <string name="new_theme_setting">New theme setting is %1$s.
        Switch back to Main Activity to implement change.</string>
    <string name="new_screen_setting">New screen setting is %1$s.</string>
    <string name="classification">Classification</string>
    <string name="take_photo">Take Photo</string>
    <string name="barcode_scanner_settings">Barcode Scanner Settings</string>
    <string name="new_barcode_setting">New barcode scanner setting is %1$s.</string>
    <string name="voice_only_mode">Voice only Mode</string>
    <string name="which_item">Which item?</string>
    <string name="which_place">which place?</string>
    <string name="add_item">Add Item</string>
    <string name="add">Add</string>
    <string name="cancel_cap">Cancel</string>
    <string name="add_new_grocery_item">Add a New Grocery Item</string>
    <string name="settings_keep_screen_on">Keep Screen On</string>
    <string-array name="keep_screen_on_options">
        <item>Keep Screen Always On</item>
        <item>Do Not Keep Screen Always On</item>
    </string-array>
    <string name="settings_theme">Theme</string>
    <string-array name="theme_options">
        <item>System Default Theme</item>
        <item>Light Theme</item>
        <item>Dark Theme</item>
    </string-array>
    <string name="settings_barcode_mode">Barcode Service</string>
    <string-array name="barcode_mode_options">
        <item>Barcode Scanner On</item>
        <item>Barcode Scanner Off</item>
    </string-array>
    <string name="settings_feedback">Feedback</string>
    <string-array name="feedback_options">
        <item>Tactile Feedback</item>
        <item>Auditory Feedback</item>
        <item>Tactile and Auditory Feedback</item>
        <item>No Feedback</item>
    </string-array>
    <string name="settings_narration_amount">Narration Amount</string>
    <string-array name="narration_amount_options">
        <item>Standard Narration</item>
        <item>No Narration</item>
        <item>Extensive Narration</item>
    </string-array>
    <string name="settings_narration_speed">Narration Speed</string>
    <string-array name="narration_speed_options">
        <item>Normal Narration Speed</item>
        <item>Fast Narration Speed</item>
        <item>Slow Narration Speed</item>
    </string-array>
    <string-array name="settings_name_and_volume">
        <item>Name and Volume On</item>
        <item>Name and Volume Off</item>
    </string-array>
    <string-array name="settings_labels">
        <item>Labels On</item>
        <item>Labels Off</item>
    </string-array>
    <string-array name="settings_country_of_origin">
        <item>Country of Origin On</item>
        <item>Country of Origin Off</item>
    </string-array>
    <string-array name="settings_ingredients_and_allergies">
        <item>Ingredients and Allergies On</item>
        <item>Ingredients and Allergies Off</item>
    </string-array>
    <string-array name="settings_short_nutritional_values">
        <item>Nutritional Values On</item>
        <item>Nutritional Values Off</item>
    </string-array>
    <string-array name="settings_brand">
        <item>Brand On</item>
        <item>Brand Off</item>
    </string-array>
    <string name="microphone">Microphone</string>
    <string name="placeholder">Placeholder</string>
    <string name="nothing_to_the_left">There is nothing to to the left</string>
    <string name="nothing_to_the_right">There is nothing to to the right</string>
    <string name="more_activities">More activities</string>
    <string name="barcode_scanner">Barcode scanner</string>
    <string name="tell_me_all_Items">Tell me all items</string>
    <string name="remove_all_items">Remove all items</string>
    <string name="grocery_items">Grocery items</string>
    <string name="remove_item">Remove an item</string>
    <string name="more_items">More items</string>
    <string name="list_view">List view</string>
    <string name="get_to_favorites">Get to favorites</string>
    <string name="add_new_place">Add new place</string>
    <string name="other_favorites">Other favorites</string>
    <string name="feedback">Feedback</string>
    <string name="more_settings">More Settings</string>
</resources>