<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    android:backgroundTint="#FF0000"
    tools:context=".activities.SettingsActivity">

    <!-- Top Guideline (33% from top) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <!-- Bottom Guideline (67% from top) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <FrameLayout
        android:id="@+id/oval_container"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_oval_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Central Microphone Icon -->
        <ImageView
            android:id="@+id/microphone_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/microphone"
            android:src="@drawable/ic_mic_black" />

    </FrameLayout>

    <!-- Diagonal Lines -->
    <!-- Top Left to Center -->
    <View
        android:layout_width="2dp"
        android:layout_height="500dp"
        android:background="?android:textColorPrimary"
        android:rotation="-28"
        app:layout_constraintBottom_toTopOf="@id/oval_container"
        app:layout_constraintEnd_toStartOf="@id/oval_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Top Right to Center -->
    <View
        android:layout_width="2dp"
        android:layout_height="500dp"
        android:background="?android:textColorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/oval_container"
        app:layout_constraintStart_toEndOf="@id/oval_container"
        android:rotation="28"/>

    <!-- Bottom Left to Center -->
    <View
        android:layout_width="2dp"
        android:layout_height="500dp"
        android:background="?android:textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oval_container"
        app:layout_constraintEnd_toStartOf="@id/oval_container"
        android:rotation="28"/>

    <!-- Bottom Right to Center -->
    <View
        android:layout_width="2dp"
        android:layout_height="500dp"
        android:background="?android:textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oval_container"
        app:layout_constraintStart_toEndOf="@id/oval_container"
        android:rotation="-28"/>

    <!-- Buttons -->
    <!-- Top Option -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_feedback"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:backgroundTint="?colorPrimary"
        android:textColor="?android:textColorPrimary"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <!-- Bottom Option -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/option_bottom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/barcode_scanner_settings"
        android:backgroundTint="?colorPrimary"
        android:textColor="?android:textColorPrimary"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:targetApi="o" />

    <!-- Left Option -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/option_left"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/more_settings"
        android:backgroundTint="?colorPrimary"
        android:textColor="?android:textColorPrimary"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/oval_container"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:targetApi="o" />

    <!-- Right Option -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/option_right"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/more_settings"
        android:backgroundTint="?colorPrimary"
        android:textColor="?android:textColorPrimary"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@id/oval_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>
